--- a/publications.html
+++ b/publications.html
@@ -113,7 +113,7 @@
       <span class="year">2014</span>
       </a>
   </span>
-      <span class="pub-abstract" itemprop="text"><em>Abstract:</em>We examine the role of defaults in high-frequency, small-scale choices using unique data on over 13 million NYC taxi rides. We exploit a shift in the set of default tip suggestions presented to customers prior to payment, as the base fare changes from below $15 to above $15. Using a regression discontinuity design, we show that default suggestions have a large impact on tip amounts. These results are supported by a secondary analysis that uses the quasi-random assignment of customers to different cars to examine default effects on all fares above $15. Finally, we highlight a potential cost of setting defaults too high, as a higher proportion of customers opt to leave no credit card tip when presented with the higher suggested amounts.</p>
+      <span class="pub-abstract"><em>Abstract:</em>We examine the role of defaults in high-frequency, small-scale choices using unique data on over 13 million NYC taxi rides. We exploit a shift in the set of default tip suggestions presented to customers prior to payment, as the base fare changes from below $15 to above $15. Using a regression discontinuity design, we show that default suggestions have a large impact on tip amounts. These results are supported by a secondary analysis that uses the quasi-random assignment of customers to different cars to examine default effects on all fares above $15. Finally, we highlight a potential cost of setting defaults too high, as a higher proportion of customers opt to leave no credit card tip when presented with the higher suggested amounts.</p>
   </li>
 
 </ul>
