--- a/research.html
+++ b/research.html
@@ -96,12 +96,9 @@
         <a href="http://kareemhaggag.github.com/testsite/f/Attribution_Bias.pdf">
        Attribution Bias in Consumer Choice
         </a>
+        (May 2016)
       </span>
-      <span class="authors">Kareem Haggag, Devin Pope</span>
-      <span class="journal-info">
-      
-      <span class="year">2016</span>
-
+      <span class="authors">Kareem Haggag, Devin Pope</span>     
       <span class="abstract">Abstract: When judging the value of a good, people may be overly influenced by the state in which they previously consumed it. For example, someone who tries out a new restaurant while very hungry may subsequently rate it as high quality, even if the food is mediocre. We produce a simple framework for this form of attribution bias that embeds a standard model of decision making as a special case. We test for attribution bias across two consumer decisions. First, we conduct an experiment in which we randomly manipulate the thirst of participants prior to consuming a new drink. Second, using data from thousands of amusement park visitors, we explore how pleasant weather during their most recent trip affects their stated likelihood of returning. In both of these domains, we find evidence that people misattribute the influence of a temporary state to a stable quality of the consumption good. We provide evidence against several alternative accounts for our findings and discuss the broader implications of attribution bias in economic decision making.</span>
 
   </li>
@@ -122,6 +119,7 @@
         <a href="http://kareemhaggag.github.com/testsite/f/LBD.pdf">
        Learning by Driving: Productivity Improvements by New York City Taxi Drivers
         </a>
+        (January 2017)
       </span>
       <span class="authors">Kareem Haggag, Brian McManus, Giovanni Paci</span>
       <span class="journal-info">
@@ -149,6 +147,7 @@
         <a href="http://kareemhaggag.github.com/testsite/f/Default_Tips.pdf">
           Default Tips
         </a>
+        (August 2016)
       </span>
       <span class="authors">Kareem Haggag, Giovanni Paci</span>
       <span class="journal-info">
